# tile-mosaic

./: .gitignore  README.md  pyproject.toml
api/: app.py  file_func.py
notebooks/: visualize_image.ipynb
src/: image_parser.py  main.py  tiles.py
templates/: upload.html
