[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tile-mosaic"
authors = [
    {name = "Kamyar R", email = "notPublicYet@gmail.com"},
]

description = "App to split images into mosaic tiles."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mosaic", "tile", "images", "vision"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",

]
dependencies = [
    "requests",
    "numpy>=2.0.0",
    "matplotlib>=3.9.1",
    "pillow>=11.0.0"
]

dynamic = ["version"]